fixed spacing issue with submit buttons , margin adjustment

--- a/app/assets/stylesheets/bootstrap_and_overrides.css
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css
@@ -54,6 +54,10 @@ body {
   margin-top: 20px; 
 }
 
+.btn_submit{
+  margin-top: 10px
+}
+
 /* Timeline CSS */
 
 .timeline {
